--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "6.17.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "@vitejs/plugin-react": "4.1.0",
